--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -65,3 +65,15 @@
 # source = "https://github.com/myfork/package.git"
 
 
+
+[[constraint]]
+  name = "github.com/davecgh/go-spew"
+  version = "1.1.0"
+
+[[constraint]]
+  name = "github.com/pmezard/go-difflib"
+  version = "1.0.0"
+
+[[constraint]]  
+  name = "github.com/stretchr/testify"
+  version = "1.1.4"
